src/test/compile-fail/attr-before-ext.rs
fn main() {
    #[attr]
    #debug("hi"); //! ERROR expected item
}